Add folder Repositories to GradeBook.Infrastructure

--- a/GradeBook.Infrastructure/GradeBook.Infrastructure.csproj
+++ b/GradeBook.Infrastructure/GradeBook.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\GradeBook.Application\GradeBook.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
