--- a/GradeBook.Api/appsettings.json
+++ b/GradeBook.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "GradebookCS": "Server=PSL-DOB-DELL; Datebase=GradebookDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
