--- a/GradeBook.Api/appsettings.json
+++ b/GradeBook.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "GradebookCS": "Server=PSL-DOB-DELL; Datebase=GradebookDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+    "GradebookCS": "Server=LAPTOPIK\\SQLEXPRESS; Datebase=GradebookDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
