--- a/GradeBook.Application/GradeBook.Application.csproj
+++ b/GradeBook.Application/GradeBook.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Gradebook.Domain\Gradebook.Domain.csproj" />
   </ItemGroup>
 
