--- a/GradeBook.Infrastructure/GradeBook.Infrastructure.csproj
+++ b/GradeBook.Infrastructure/GradeBook.Infrastructure.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\GradeBook.Application\GradeBook.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Logging\" />
+  </ItemGroup>
+
 </Project>
